--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@opentelemetry/instrumentation": "0.27.0",
     "@opentelemetry/instrumentation-document-load": "^0.27.1",
     "@opentelemetry/instrumentation-fetch": "0.27.0",
+    "@opentelemetry/instrumentation-user-interaction": "^0.28.1",
     "@opentelemetry/instrumentation-xml-http-request": "0.27.0",
     "@opentelemetry/resources": "1.0.1",
     "@opentelemetry/sdk-trace-base": "1.0.1",
