enable plugin to interact with backend settings

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rimraf build/*",
     "compile": "tsc --build tsconfig.json",
-    "build": "npx webpack --mode=production",
+    "build": "npx webpack --mode=production && cp src/static/*.css build/mv3",
     "build:mv2": "npx webpack --mode=production --env MV=2",
     "build:mv3": "npx webpack --mode=production --env MV=3",
     "lint": "eslint .",
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "5.8.1",
     "@typescript-eslint/parser": "5.8.1",
     "colors": "1.4.0",
+    "css-loader": "^6.6.0",
     "eslint": "8.7.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-header": "3.1.1",
@@ -64,6 +65,7 @@
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
+    "@opentelemetry/auto-instrumentations-web": "^0.27.2",
     "@opentelemetry/context-zone": "1.0.1",
     "@opentelemetry/core": "1.0.1",
     "@opentelemetry/exporter-trace-otlp-http": "0.27.0",
